--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@innotrade/enapso-config",
-    "version": "1.2.1",
-    "description": "ENAPSO Hierarchical Enterprise Configuration Management",
+    "version": "1.2.2",
+    "description": "ENAPSO Enterprise Configuration Management",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
